--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,10 @@ name: CI
 on:
   push:
     branches: [main, master]
+    paths:
+      - 'src/**'
+      - 'package.json'
+      - '.github/workflows/**'
   pull_request:
     branches: [main, master]
 
